Fix truncated display of images in the gallery

--- a/resources/media/base.less
+++ b/resources/media/base.less
@@ -436,13 +436,14 @@ body {
    .noselect();
    >div  {
      display: none;
-     //border: 1px solid black;
+     text-align: center;
      //-webkit-box-shadow: 10px     3px 10px 10px black;
      box-shadow: 0px 10px 40px -10px black;
      img {  //  resize images when the div itself is resized
        border: 0px;
-       width:100%;
-       height:100%;
+       max-width:100%;
+       max-height:100%;
+       margin: 0 auto;
      }
    }
 }
